header overflow x issue solved

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
-   
+html,body {
+    overflow-x: hidden;
+}   
+
 .navbar {
     box-shadow: -21.213px 21.213px 30px 0 rgb(158 158 158 / 30%);
+    max-width: 100vw;
 }
 
 
